--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@discordjs/builders": "^1.8.2",
     "@discordjs/rest": "^2.3.0",
-    "discord.js": "^14.15.3"
+    "@huggingface/inference": "^2.8.0",
+    "axios": "^1.7.5",
+    "discord.js": "^14.15.3",
+    "openai": "^4.56.0"
   }
 }
